web-footer complete
1. Gulp install gulp-filter and gulp-progeny
2.web-footer  complete
3.change _general folder structure for header/fooer module

--- a/dev/_general/temp_page.jade
+++ b/dev/_general/temp_page.jade
@@ -1,9 +1,11 @@
+doctype html
 html
     head
+        link(href='all.css', rel='stylesheet')
         block css
     body
-        include ./header.jade
-        main
+        include ./header/header.jade
+        main#main
             block content
             
-        include ./footer.jade
+        include ./footer/footer.jade
