--- a/dev/_general/footer/footer.jade
+++ b/dev/_general/footer/footer.jade
@@ -3,20 +3,20 @@ footer#footer
 
     #footer_link
         ul
-            li
+            li.footer_link
                 a(href='#') 
                     i.fa.fa-phone(aria-hidden='true')
                     | 02-22221111
-            li
+            li.footer_link
                 a(href='#') 
                     i.fa.fa-envelope-o(aria-hidden='true')
                     | service@mistermorden.com
         ul
-            li
+            li.footer_link
                 a(href='#') 購物須知
-            li
+            li.footer_link
                 a(href='#') 關於Enjoy！享受吧！
-            li
+            li.footer_link
                 a(href='#') 隱私權政策
             
     .copyright Copyright 2016 BOOM Co., LTD, All rights reserved.
