change font-awesome fonts link
Because the https protocol can’t use http protocol  access files.
In stylus (gerenal.styl) , the font-awesome fonts path should change
one, which website is using https.

--- a/dev/_general/general.styl
+++ b/dev/_general/general.styl
@@ -5,7 +5,7 @@ normalize()
 // Set font path
 //$fa-font-path = "../fonts"
 // OR
-$fa-font-path = "http://netdna.bootstrapcdn.com/font-awesome/4.7.0/fonts"
+$fa-font-path = "https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/fonts"
 @import "../../font-awesome-stylus/stylus/index"
 // Include icon using mixin
 // .my-icon
