--- a/dev/_general/footer/footer.styl
+++ b/dev/_general/footer/footer.styl
@@ -1,11 +1,13 @@
 #footer
-    background: #FFF8F6
+    background: $pink_light
     padding: 30px 0
-    color: $font_pink
+    color: $pink_medium
     display: flex
     flex-direction: column
     flex-axis: center center
-    font-size: $small_font
+    font-size: $font12
+    height: $footer_height
+    box-sizing: border-box
 
 #footer_link
     display: flex
