--- a/dev/_general/header/header.jade
+++ b/dev/_general/header/header.jade
@@ -49,9 +49,12 @@ header#header
             li 限時優惠
                 div.child_category_wrapper
                     ul.child_category_list
-                        li C&CHAT 幻彩系指油貼任選兩件500元
-                        li Dear Mia系列產品消費滿2,000元現折200元
-                        li 歡慶母親節·美體保養消費滿1500元現折500元
+                        li 
+                            a(href="") C&CHAT 幻彩系指油貼任選兩件500元
+                        li 
+                            a(href="") Dear Mia系列產品消費滿2,000元現折200元
+                        li 
+                            a(href="") 歡慶母親節·美體保養消費滿1500元現折500元
                     img(src="./asset/pic1.png")
                     
             li 最新商品
