--- a/dev/_general/header/header.styl
+++ b/dev/_general/header/header.styl
@@ -1,6 +1,8 @@
 $nav_btns_margin = 13.2%
 $search_component_height = 20px
 $nav_btns_wrapper_height = 45px
+$dropdown_triangle_height = 7px
+
 .nav_btns_wrapper
     background: $pink_deep
     color: white
@@ -30,9 +32,13 @@ $nav_btns_wrapper_height = 45px
         font-style: normal
         font-size: $font18
         cursor: pointer
+        
     
     .small_icon
         font-size: $font16
+
+.dropdown_block_wrapper>i.fa
+    padding-bottom: 16px;
 
 .dropdown_block
     background: white
@@ -43,7 +49,7 @@ $nav_btns_wrapper_height = 45px
     box-shadow: 0 2px 4px 0 #F0E1DB
     position: absolute
     white-space: nowrap
-    margin-top: 42px
+    margin-top: 34px
     height: 40px
     show_dropdown_animation(".dropdown_block_wrapper>i:hover + &")
 
@@ -57,14 +63,15 @@ $nav_btns_wrapper_height = 45px
     &:before
         content: ''
         position: absolute
-        left: 50%;
-        transform: translateX(-50%);
-        topDownTriangle( 7px, 6px , $pink_deep )
+        left: 50%
+        transform: translateX(-50%) translateY(- $dropdown_triangle_height)
+        topDownTriangle( $dropdown_triangle_height, 6px , $pink_deep )
+        border-top-width:0
         align-self: flex-start;
 
     .nav_btns.right &
         /*因為nav icon高度都不同，所以排列不整齊，導致margin會有些許差距需要特別設定*/
-        margin-top: 44px
+        margin-top: (34px + 2)
 
 #search_input
     border-bottom: 1px solid $pink_medium
