Home page body is complete 80%
1.add reset css for h1~6
2.the body of home is complete 80%(include rwd)
3.survey header category problem

--- a/dev/_general/general.styl
+++ b/dev/_general/general.styl
@@ -24,6 +24,7 @@ $font13 = 13px
 $font15 = 15px
 $font16 = 16px
 $font18 = 18px
+$font35 = 35px
 
 /*CSS reset*/
 ul
@@ -38,6 +39,9 @@ a
 input
     border: none
     outline: none
+
+h1,h2,h3,h4,h5,h6,p
+    margin: 0
     
 /*minix*/
 
@@ -81,7 +85,7 @@ show_dropdown_animation(trgger_hover_selector)
     {trgger_hover_selector}:before
         border-top-width: 7px
         transform: translateY(0)
-        transition: transform 0.15s linear 0.4s,border-top-width 0.15s linear 0.4s
+        transition: transform 0.15s linear 0.3s,border-top-width 0.15s linear 0.3s
     
     
     
