--- a/dev/_general/header/header.styl
+++ b/dev/_general/header/header.styl
@@ -150,6 +150,15 @@ $dropdown_triangle_height = 7px
             &:hover
                 color: $pink_medium
 
+.child_category_wrapper_attach_right
+    position: fixed;
+    right: 0;
+    left: initial;
+
+.child_category_wrapper_attach_left
+    position: fixed;
+    left: 0;
+    right: initial;
 /*special request*/
 
 //search icon min and move up 1px
@@ -158,6 +167,9 @@ $dropdown_triangle_height = 7px
     top: -1px;
     font-size: $font15
 }
+
+
+
 
 //+media-query( only screen ,max-width 900px )
 
