--- a/dev/home/index.jade
+++ b/dev/home/index.jade
@@ -1,3 +1,55 @@
 extends ../_general/temp_page.jade
 
 block content
+    #top_banner
+        .col_center.bg_pink_medium
+        .col_left
+            .row.bg_skin_deep
+                a(href="#")
+                    img(src="./asset/美甲彩繪banner.png")
+                    
+
+            .row.bg_pink_deep
+                a(href="#")
+                    img(src="./asset/時尚彩妝banner.png")
+                    .category_text
+                        h2.category_text_zhtw
+                            | 時尚
+                            br
+                            | 彩妝
+                        h6.category_text_en Make Up
+
+        .col_right
+            .row.bg_skin_deep
+                a(href="#")
+                    img(src="./asset/美體保養banner.png")
+            .row.bg_skin_light
+                a(href="#")
+                    img(src="./asset/香氛香氣banner.png")
+
+    #bottom_banner
+        
+            .col.row.bg_skin_light
+                a(href="#")
+                    img(src="./asset/限時優惠banner.png")
+                    .category_text
+                        h2.category_text_zhtw 限時優惠
+                        h6.category_text_en Make Up
+        
+        
+            .col.row.bg_skin_light
+                a(href="#")
+                    img(src="./asset/最新商品banner.png")
+                    .category_text
+                        h2.category_text_zhtw 最新商品
+                        h6.category_text_en Make Up
+        
+        
+            .col.row.bg_skin_light
+                a(href="#")
+                    img(src="./asset/熱門商品banner.png")
+                    .category_text
+                        h2.category_text_zhtw 熱門商品
+                        h6.category_text_en Hot Deals
+    
+    
