--- a/dev/_general/temp_page.jade
+++ b/dev/_general/temp_page.jade
@@ -3,7 +3,9 @@ html
     head
         meta(name='viewport' content='width=device-width, initial-scale=1')
         link(href='all.css', rel='stylesheet')
+        //script(src='https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js')
         block css
+
     body
         include ./header/header.jade
         main#main
