--- a/dev/home/all.styl
+++ b/dev/home/all.styl
@@ -143,11 +143,14 @@ $row_after_layer = 3
 
     &>h1
         font-size: $font20
+        margin-bottom: 5px
         
     &>h2
         font-weight: lighter;
         color: #DFA69F
         font-size: $font15
+        margin-left: -7px
+
     &>form
         height: 40px
         width: 370px
@@ -169,7 +172,10 @@ $row_after_layer = 3
 
     i
         font-size: $font24
-        margin: 0 5px
+        margin: 0 10px
+
+        &:hover
+            color: $brown_icon_hover
     
     #subscribe_btn
         height: inherit
@@ -177,6 +183,7 @@ $row_after_layer = 3
         color: white
         background: $pink_medium
         border-left: 1px solid $pink_medium
+        cursor: pointer
 
         &:active
             background: white
