Modify footer and main body
1.footer link add hover
2.add left/right padding for #subscribe section
3.補上其他.category_text content

--- a/dev/home/all.styl
+++ b/dev/home/all.styl
@@ -139,7 +139,7 @@ $row_after_layer = 3
     flex-axis: center
     flex-direction: column
     color: $pink_medium
-    padding: 50px 0
+    padding: 50px 40px
 
     &>h1
         font-size: $font20
@@ -153,7 +153,8 @@ $row_after_layer = 3
 
     &>form
         height: 40px
-        width: 370px
+        max-width: 370px
+        width: 100%
         border-radius: 20px
         display: flex
         border: 1px solid $pink_medium
