--- a/dev/home/index.jade
+++ b/dev/home/index.jade
@@ -7,6 +7,12 @@ block content
             .row.bg_skin_deep
                 a(href="#")
                     img(src="./asset/美甲彩繪banner.png")
+                    .category_text
+                        h2.category_text_zhtw
+                            | 美甲
+                            br
+                            | 彩繪
+                        h6.category_text_en Nail Art
                     
 
             .row.bg_pink_deep
@@ -23,9 +29,22 @@ block content
             .row.bg_skin_deep
                 a(href="#")
                     img(src="./asset/美體保養banner.png")
+                    .category_text
+                        h2.category_text_zhtw
+                            | 美體
+                            br
+                            | 保養
+                        h6.category_text_en Skin Care
+
             .row.bg_skin_light
                 a(href="#")
                     img(src="./asset/香氛香氣banner.png")
+                    .category_text
+                        h2.category_text_zhtw
+                            | 香氛
+                            br
+                            | 香氣
+                        h6.category_text_en Aroma
 
     section#bottom_banner
         
@@ -34,7 +53,7 @@ block content
                     img(src="./asset/限時優惠banner.png")
                     .category_text
                         h2.category_text_zhtw 限時優惠
-                        h6.category_text_en Make Up
+                        h6.category_text_en Sale
         
         
             .col.row.bg_skin_light
@@ -42,7 +61,7 @@ block content
                     img(src="./asset/最新商品banner.png")
                     .category_text
                         h2.category_text_zhtw 最新商品
-                        h6.category_text_en Make Up
+                        h6.category_text_en New Arrival
         
         
             .col.row.bg_skin_light
