--- a/dev/_general/footer/footer.styl
+++ b/dev/_general/footer/footer.styl
@@ -19,6 +19,9 @@
 
         i
             margin-right: 10px
+        
+        &:hover
+            color:$pink_deep
 
 .copyright
     margin-top: 20px
