--- a/dev/home/all.styl
+++ b/dev/home/all.styl
@@ -191,6 +191,14 @@ $row_after_layer = 3
             color: $pink_medium
 
 
++media-query( screen , max-width 1050px , min-width 700px )
+    .category_text_zhtw
+        font-size: $font22
+
+
+    .category_text_en
+        font-size: $font13
+
 @media screen and (max-width: 700px) {
   
     .col_center{
