--- a/dev/home/index.jade
+++ b/dev/home/index.jade
@@ -6,8 +6,7 @@ block css
 
 block js
     script(type='text/javascript', src='https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.6.0/slick.min.js')
-    script
-        $(document).ready(function(){$('.slick_slide').slick({dots: true});});
+    //script
 
 block content
     section#top_banner
