--- a/dev/_general/general.styl
+++ b/dev/_general/general.styl
@@ -18,6 +18,7 @@ $pink_medium = #D6645F
 $pink_deep = #D5948E
 $brown = #8B572A
 $brown_icon_hover = #8E5651
+$gray_link = #9B9B9B
 
 $font12 = 12px
 $font13 = 13px
@@ -45,6 +46,14 @@ input
 
 h1,h2,h3,h4,h5,h6,p
     margin: 0
+
+select
+    outline: none
+
+/*RWD width define*/
+$footer_rwd_width = 850px
+$phone_rwd_width = 550px
+$tablet_rwd_width = 850px
     
 /*minix*/
 
@@ -99,13 +108,14 @@ show_dropdown_animation(trgger_hover_selector)
 @import "./footer/footer"
 
 html
-  height: 100%;
-  font-size: $font12
+    height: 100%;
+    font-size: $font12
+    overflow-x: hidden
 
 body
-  min-height: 100%
-  display: flex
-  flex-direction: column
+    min-height: 100%
+    display: flex
+    flex-direction: column
 
 #main
     flex: 1
