--- a/dev/_general/header/header.jade
+++ b/dev/_general/header/header.jade
@@ -55,7 +55,7 @@ header#header
                             a(href="") Dear Mia系列產品消費滿2,000元現折200元
                         li 
                             a(href="") 歡慶母親節·美體保養消費滿1500元現折500元
-                    img(src="./asset/pic1.png")
+                    img(src="../general/img/pic1.png")
                     
             li 最新商品
             li 熱門商品
@@ -75,7 +75,7 @@ header#header
                             a(href="") Dear Mia系列產品消費滿2,000元現折200元
                         li 
                             a(href="") 歡慶母親節·美體保養消費滿1500元現折500元
-                    img(src="./asset/pic1.png")
+                    img(src="../general/img/pic1.png")
                 
                 
                 
