--- a/dev/_general/header/header.styl
+++ b/dev/_general/header/header.styl
@@ -132,6 +132,7 @@ $dropdown_triangle_height = 7px
     box-shadow: 0 1px 2px 0 rgba(97,97,97,0.70)
     position: absolute
     left: -40px
+    z-index: 10
     margin-top: 10px
     white-space: nowrap
     /*show*/
