--- a/dev/_general/temp_page.jade
+++ b/dev/_general/temp_page.jade
@@ -6,6 +6,7 @@ html
 
         link(href='all.css', rel='stylesheet')
         script(src='https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js')
+        script(src='bundle.js')
         
         block js
             
