--- a/dev/home/all.styl
+++ b/dev/home/all.styl
@@ -180,17 +180,18 @@ $slide_arrow_side_distance = 25px
         &:hover
             color: $brown_icon_hover
     
-    #subscribe_btn
-        height: inherit
-        width: 100px
-        color: white
-        background: $pink_medium
-        border-left: 1px solid $pink_medium
-        cursor: pointer
+#subscribe_btn
+    height: inherit
+    width: 100px
+    color: white
+    background: $pink_medium
+    border-left: 1px solid $pink_medium
+    cursor: pointer
+    border-radius: 0
 
-        &:active
-            background: white
-            color: $pink_medium
+    &:active
+        background: white
+        color: $pink_medium
 
 
 /*add for third part lib slick http://kenwheeler.github.io/slick/ */
@@ -259,6 +260,12 @@ $slide_arrow_side_distance = 25px
 
     .category_text_en
         font-size: $font13
+
++media-query( screen , max-width 450px )
+    #subscribe_newsletters>h1
+        font-size: $font16
+    #subscribe_newsletters>h2
+        font-size: $font12
 
 @media screen and (max-width: 700px) {
   
