修正.page_top_button css for rwd
1. Add css for .page_top_button when screen rwd the button will be
disappear in view

--- a/dev/_general/commodity_page_basic.styl
+++ b/dev/_general/commodity_page_basic.styl
@@ -83,6 +83,11 @@ of commodity page
 +media-query( only screen ,max-width ($tablet_rwd_width + 150) )
     #main
         padding: 0 40px
+
+    .page_top_button
+        display: none
+        visibility: hidden
+        opacity: 0
 +media-query( only screen ,max-width $tablet_rwd_width )
     #main
         padding: 0
