修正小細節(color/margin / padding)
1.change footer color
2.change home icon margin
3.page nav margin

--- a/dev/_general/footer/footer.styl
+++ b/dev/_general/footer/footer.styl
@@ -1,7 +1,7 @@
 #footer
     background: $pink_light
     padding: 30px 0
-    color: $pink_deep
+    color: $pink_medium
     display: flex
     flex-direction: column
     flex-axis: center center
@@ -15,7 +15,7 @@
         display: flex
     a
         &:hover
-            color:$pink_medium
+            color:#D6645F
         
         &:active
             color:$pink_deep
