--- a/dev/_general/header/header.jade
+++ b/dev/_general/header/header.jade
@@ -1,47 +1,8 @@
 include ./logoImgBase64.jade
 
--var line = "|"
-
 header#header
-    nav.nav_btns_wrapper
-        .nav_btns.left
-            a(href="#")
-                i.fa.fa-instagram(aria-hidden='true')
-            a(href="#")
-                i.fa.fa-facebook-official(aria-hidden='true')
-
-            | <i>|</i>
-            
-            span.dropdown_block_wrapper
-                i.fa.fa-user-circle-o.small_icon(aria-hidden='true')
-
-                ul.dropdown_block
-                    li 
-                        a(href="#") 訂單查詢
-                    li
-                        a(href="#") 我的收藏清單
-                    li
-                        a(href="#") 購物金折抵券
-                    li
-                        a(href="#") 帳戶設定
-                    li
-                        a(href="#") 登出
-
-
-            a(href="#")
-                i.fa.fa-heart.small_icon(aria-hidden='true')
-
-        .nav_btns.right
-
-            span.dropdown_block_wrapper
-                i.fa.fa-search.small_icon(aria-hidden='true')
-                form.dropdown_block
-                    input(type="text" placeholder="Search...")#search_input
-                    input(type="submit" value="GO")#search_go
-
-            a(href="#")
-                i.fa.fa-shopping-cart(aria-hidden='true')
-
+    nav.space_block.scroll_disappear
+        
     nav.nav_list_wrapper
         img(alt="Embedded Image" src=logoImgBase64)#logo_img
         
@@ -77,5 +38,43 @@ header#header
                             a(href="") 歡慶母親節·美體保養消費滿1500元現折500元
                     img(src="../general/img/pic1.png")
                 
+        div.nav_btns_wrapper
+            .nav_btns.left
+                a(href="#").scroll_disappear
+                    i.fa.fa-instagram(aria-hidden='true')
+                a(href="#").scroll_disappear
+                    i.fa.fa-facebook-official(aria-hidden='true')
+
+                | <i class="scroll_disappear">|</i>
                 
-                
+                span.dropdown_block_wrapper
+                    i.fa.fa-user-circle-o.small_icon(aria-hidden='true')
+
+                    ul.dropdown_block
+                        li 
+                            a(href="#") 訂單查詢
+                        li
+                            a(href="#") 我的收藏清單
+                        li
+                            a(href="#") 購物金折抵券
+                        li
+                            a(href="#") 帳戶設定
+                        li
+                            a(href="#") 登出
+
+
+                a(href="#")
+                    i.fa.fa-heart.small_icon(aria-hidden='true')
+
+            .nav_btns.right
+
+                span.dropdown_block_wrapper
+                    i.fa.fa-search.small_icon(aria-hidden='true')
+                    form.dropdown_block
+                        input(type="text" placeholder="Search...")#search_input
+                        input(type="submit" value="GO")#search_go
+
+                a(href="#")
+                    i.fa.fa-shopping-cart(aria-hidden='true')
+
+                    
