--- a/dev/_general/header/header.styl
+++ b/dev/_general/header/header.styl
@@ -1,16 +1,19 @@
 $nav_btns_margin = 13.2%
 $search_component_height = 20px
 $nav_btns_wrapper_height = 45px
+$nav_scrolled_height = 45px
 $dropdown_triangle_height = 7px
 
-.nav_btns_wrapper
+.space_block
     background: $pink_deep
-    color: white
     height: $nav_btns_wrapper_height
-    line-height: $nav_btns_wrapper_height
+
+.nav_btns_wrapper
+    color: white
 
 .nav_btns
     position: absolute
+    top: 12px
     
     &.left
         left: $nav_btns_margin
@@ -32,7 +35,9 @@ $dropdown_triangle_height = 7px
         font-style: normal
         font-size: $font18
         cursor: pointer
-        
+
+    i.fa-user-circle-o
+        margin-bottom: 1px
     
     .small_icon
         font-size: $font16
@@ -175,3 +180,40 @@ $dropdown_triangle_height = 7px
 //+media-query( only screen ,max-width 900px )
 
 
+//tring
+.scroll_header
+    position: fixed;
+    width: 100%;
+    z-index: 20;
+    background: $pink_light
+    display: flex;
+    // flex-wrap: wrap
+    box-shadow: 0 2px 2px 0 rgba(97,97,97,0.22);
+    //transform: translateY(-($nav_scrolled_height));
+    flex-axis:center
+
+
+    .nav_btns_wrapper
+        color: $pink_deep
+    .nav_list_wrapper
+        flex-direction: row;
+        height: 45px;
+        padding: 0;
+        width: 1185px;
+        justify-content: space-between;
+
+    #logo_img
+        width: 125px;
+        height: 30px;
+        
+    .nav_btns_wrapper
+        display: flex;
+        line-height: $nav_scrolled_height;
+
+    .nav_btns
+        position: initial;
+    
+    .child_category_wrapper
+        margin-top: 15px
+    .scroll_disappear
+        display: none
