修正home / commodity_page_basic
1. adjust the height of .col_center
2.change the html/css of left/right arrow to be png file and assign by
js
3.change viewport the fixed page , user can’t scale
4.modify commodity_page_basic.styl to change web layer

--- a/dev/_general/general.styl
+++ b/dev/_general/general.styl
@@ -54,7 +54,8 @@ select
 $footer_rwd_width = 850px
 $phone_rwd_width = 550px
 $tablet_rwd_width = 850px
-    
+/**/
+$banner_max_width = 1185px
 /*minix*/
 
 topDownTriangle(height,width,face-color)
