--- a/dev/_general/header/header.styl
+++ b/dev/_general/header/header.styl
@@ -199,7 +199,8 @@ $dropdown_triangle_height = 7px
         flex-direction: row;
         height: 45px;
         padding: 0;
-        width: 1185px;
+        max-width: $banner_max_width
+        width: 100%;
         justify-content: space-between;
 
     #logo_img
