--- a/dev/limited_on_sale_entry/index.jade
+++ b/dev/limited_on_sale_entry/index.jade
@@ -2,7 +2,7 @@ extends ../_general/temp_page.jade
 
 block content
     img(src="../general/img/up.png").page_top_button
-    section
+    section#main_section
         a(href="#")#main_banner.page_link
             img(src="../general/img/banner.png")
 
