--- a/dev/_general/commodity_page_basic.styl
+++ b/dev/_general/commodity_page_basic.styl
@@ -4,6 +4,8 @@
 of commodity page
 */
 
+
+
 #main
     display: flex
     flex-axis: center
@@ -23,12 +25,20 @@ of commodity page
     bottom: 0;
 
 /*#main_banner css*/
+#main_section
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    flex-axis:center
+
 #main_banner
     margin: 10px 0
     
 #sub_section
     display: flex
     justify-content: space-between
+    width: 100%;
+    max-width: $banner_max_width
 
     .page_nav
         color: $gray_link
@@ -41,7 +51,9 @@ of commodity page
     margin-bottom: 30px
 
     >img
-        size 1185px 300px
+        position: relative;
+        z-index: -1;
+        size $banner_max_width 300px
 
     &:hover
         background: rgba(214,100,95,0.33)
@@ -77,7 +89,7 @@ of commodity page
 .commodity_count       
     color: $gray_link
 
-+media-query( only screen ,max-width ($tablet_rwd_width + 150) )
++media-query( only screen ,max-width ($banner_max_width) )
 
     .page_top_button
         display: none
@@ -86,6 +98,11 @@ of commodity page
 
     .page_nav
         display: none
+
+    .page_link>img
+        height: 250px
+        
+            
 
 +media-query( only screen ,max-width $tablet_rwd_width )
     #main
@@ -97,8 +114,7 @@ of commodity page
         >img
             height: 200px
             width: initial
-            position: relative
-            z-index: -1
+
         &:last-child
             margin-bottom: 10px
 
