--- a/dev/_general/temp_page.jade
+++ b/dev/_general/temp_page.jade
@@ -1,7 +1,7 @@
 doctype html
 html
     head
-        meta(name='viewport' content='width=device-width, initial-scale=1')
+        meta(name='viewport' content='width=device-width, initial-scale=1.0, minimum-scale=0.8, maximum-scale=2.0, user-scalable=no')
         block css
 
         link(href='all.css', rel='stylesheet')
